ทำ controller ของ ระบบการตรวจรักษา - close #90
